<resources>
    <string name="app_name">City Explorer</string>
    <string name="action_settings">Einstellungen</string>
    <string name="zumQuizButton">Quiz</string>
    <string name="buttonPinnwand">Pinnwand</string>
    <string name="mainactivity_badges_title">Punktestand</string>
    <string name="mainactivity_evaluation_title">Evaluation</string>
    <string name="mainactivity_info_title">Quellen der Inhalte</string>
    <string name="mainactivity_help_title">Hilfe</string>
    <string name="dialog_evaluation">Diese App ist Teil einer Bachelor-Arbeit. Falls Sie mindestens 2 Quizzes und 2 Pinnwandeinträge abgeschlossen haben (je mehr desto besser!), würde ich mich freuen, wenn Sie an der Evauluation dieser App teilnehmen. Diese besteht aus einem Fragebogen, der nur wenige Minuten in Anspruch nimmt. Diesen können Sie selbstverständlich auch an Ihrem Desktop-PC unter https://www.soscisurvey.de/CityExplorer bearbeiten.</string>
    <string name="dialog_evaluation_start">Evaluation starten</string>
    <string name="dialog_evaluation_later">Später</string>
    <string name="done_Snippet">Zum Öffnen tippen</string>
    <string name="go_to_toast">"Gehe zur/zum "</string>
    <string name="go_to_toast_2">" um diesen Marker zu öffnen."</string>
    <string name="alert_help">Hilfe</string>
    <string name="mainactivity_help">Gehe in die Nähe einer der Markierungen um diese auswählen zu können.\n\n
        Falls dein Standort nicht über einen blauen Punkt angezeigt wird könnte das daran liegen, dass du die Ortung in deinen Smartphone-Einstellungen oder Google Einstellungen ausgeschaltet hast.\n
        Es kann manchmal eine Weile dauern bis dein Standort auf der Karte erscheint. In Gebäuden kann die Ortung manchmal nicht erfolgen.</string>
    <string name="alert_ok">OK</string>
    <string name="toast_no_location">Standort konnte nicht gefunden werden</string>
    <string name="toast_no_picture">Bitte nimm ein Foto zum Hochladen auf.</string>
    <string name="pointsTextString">Deine Punktzahl:</string>
    <string name="anpinnen_Button">Anpinnen</string>
    <string name="badesQuizText">"Erfolgreich abgeschlossene Quizzes: "</string>
    <string name="badesPinnwandText">"Kreative Beiträge an der Pinnwand: "</string>
    <string name="badgesSummaryText">"Gesamtpunktzahl: "</string>
    <string name="badge1_titel">Der erste Schritt</string>
    <string name="badge1_subtitle">mit dem auch die längste Reise beginnt. Ersten Punkt gesammelt</string>
    <string name="badge2_titel">Quizzer</string>
    <string name="badge2_subtitle">3 Punkte durch Quizzes verdient</string>
    <string name="badge3_titel">Kreativer Kopf</string>
    <string name="badge3_subtitle">3 Punkte durch Pinnwand-Uploads verdient</string>
    <string name="badge4_titel">Würzburg-Kenner</string>
    <string name="badge4_subtitle">Alle Stationen in Würzburg abgehakt</string>
    <string name="badge5_titel">Forscher</string>
    <string name="badge5_subtitle">Du hast bereits beide Aufgabentypen getestet, weiter so!</string>
    <string name="content_description_info_image">Information Image</string>
    <string name="start_new">Neu</string>
    <string name="brush">Stift</string>
    <string name="erase">Radiergummi</string>
    <string name="save">Speichern</string>
    <string name="paint">Farbe</string>
    <string name="sml">Klein</string>
    <string name="med">Mittel</string>
    <string name="lrg">Groß</string>
    <string name="dialogTitleBrush">Stiftgröße:</string>
    <string name="dialogTitleEraser">Radiergummigröße:</string>
    <string name="dialogNewTitle">Neue Zeichnung</string>
    <string name="dialogNewQuestion">Eine neue Zeichnung anfangen?</string>
    <string name="dialogNewYes">Ja</string>
    <string name="dialogNewCancel">Abbrechen</string>
    <string name="dialogSaveTitle">Zeichnung speichern</string>
    <string name="dialogSaveQuestion">Zeichnung auf dem Gerät speichern?</string>
    <string name="dialogSaveYes">Ja</string>
    <string name="dialogSavedToast">Zeichnung erfolgreich gespeichert!</string>
    <string name="dialogNotSavedToast">Zeichnung konnte nicht gespeichert werden</string>
    <string name="dialogSaveCancel">Abbrechen</string>
    <string name="instruction_like">Doppelt auf einen Eintrag tippen, um ihm eine positive Bewertung zu geben.</string>
    <string name="toast_quiz_no_answer">Bitte eine Antwortmöglichkeit auswählen</string>
    <string name="Title1">Alte Mainbrücke</string>
    <string name="Text1">Die Alte Mainbrücke ist die älteste Brücke über den Main in Würzburg. Das Bauwerk war bis 1886 Würzburgs einziger Flussübergang.\n\n
        Die erste, romanische Steinbrücke an dieser Stelle wurde schon um 1120 unter dem Baumeister Enzelin errichtet und soll die erste Steinbrücke Deutschlands gewesen sein, zuvor gab es dort eine Fähre.\n
        Die damalige Brücke wurde bei den Hochwassern 1342 und 1442 teilweise zerstört. Daher wurde das Bauwerk nach fast 350 Jahren Standzeit durch einen Neubau, die heutige Brücke, ersetzt.\n\n
        Die Bogenbrücke aus Naturstein weist bei acht Öffnungen eine Gesamtlänge von 185 Metern auf.\n
        Bis ins 18. Jahrhundert war die Brücke militärisch befestigt und fast vollständig mit Buden bebaut.\n
        Seit Juni 1990 ist das Bauwerk für Kraftfahrzeuge gesperrt.\n\n
        Die Statuen von Heiligen und Herrschern wurden im 18. Jahrhundert auf der Brücke errichtet. Es befinden sich dort\n\n
        &#8226; Frankenkönig Pippin/Pipinus (Vater von Karl dem Großen)\n\n
        &#8226; Der Heilige Totnan (Frankenapostel)\n\n
        &#8226; Der Heilige Friedrich (ein Bischof)\n\n
        &#8226; Der Heilige Kilian (Frankenabpostel)\n\n
        &#8226; Der Heilige Joseph mit dem jungen Jesus\n\n
        &#8226; Die Heilige Jungfrau Maria (dargestellt als Patrona Franconiae)\n\n
        &#8226; Der Brückenheilige Johannes von Nepomuk\n\n
        &#8226; Der Heilige Kolonat (Frankenapostel)\n\n
        &#8226; Der Heilige Karl Borromäus/Carolus Borromaus (Vertreter der katholischen Reform)\n\n
        &#8226; Der Heilige Burkard/Burkardus (erster Bischof von Würzburg)\n\n
        &#8226; Kaiser Karl der Große/Carolus Magnus\n\n
        &#8226; Der Heilige Bruno (Bischof und Erbauer des Würzburger Doms)\n\n
        Die alte Mainbrücke ist ein beliebter Treffpunkt in Würzburg um im Sommer Wein zu trinken, der direkt dort verkauft wird. Oft kann man dabei Straßenmusikanten lauschen.\n
    </string>
    <string name="image_text_1">Historische Postkartenansicht der Alten Mainbrücke aus dem Jahr 1895\n(Doppelt tippen um zu Zoomen)</string>
    <string name="image_source_1">Bildquelle: http://www.wuerzburg-fotos.de/alte_mainbruecke.php</string>
    <string name="TaskText1">Suche dir deine Lieblingsstatue aus und formuliere, was diese Person wohl gerade angesichts des aktuellen Treibens auf der Mainbrücke denkt. Vergiss nicht mitzuteilen welche Statue du dir ausgesucht hast.</string>
    <string name="Title2">Residenz</string>
    <string name="Text2">Die Würzburger Residenz ist UNESCO-Weltkulturerbe und das Hauptwerk des süddeutschen Barock und somit eines der bedeutendsten Schlösser Europas.\n\n
        Erbaut wurde sie 1720 -1744 nach den Plänen von Balthasar Neumann. Die Decke des Treppenhauses wurde vom bedeutendsten Freskenmaler der Zeit, Giovanni Tiepolo, mit dem größten zusammenhängenden Fresko der Welt (ca. 580 m2) ausgestattet. Thema des Gemäldes sind die vier (damals anerkannten) Kontinente: Europa, Amerika, Afrika und Asien.\n
        Die Residenz diente ehemals als Sitz der Würzburger Fürstbischöfe.\n\n
        Bei der Zerstörung der Stadt im 2. Weltkrieg am 16. März 1945 wurden große Teile der Residenz zerstört, die Wiederherstellung der Paradezimmer des Kaisers dauerte nahezu 40 Jahre. Die UNESCO bezeichnet das 1997 rekonstruierte Spiegelkabinett als das vollkommenste Raumkunstwerk des Rokoko.\n\n
        Der Hofgarten war durch die barocke Stadtmauer begrenzt. Zu dieser hohen Befestigungsmauer führen symmetrisch zwei rahmende Treppenanlagen hinauf, wobei auf halber Höhe eine Terrasse eingefügt wurde. Heute blühen hier hunderte von alten Rosensorten, früher waren es beschnittene Obstbäume.\n\n
        Die Residenz hat etwa 340 Räume, von denen 42 bei einer Besichtigung als Schauräume besucht werden können. Die anderen Räume werden teilweise von der Universität und vom Martin-von-Wagner-Museum genutzt.\n\n
        Die Residenz war neben der Marienburg und der alten Mainbrücke Schauplatz des Kinofilms „Die drei Musketiere“ aus dem Jahr 2011 mit Orlando Bloom und Christoph Waltz.
    </string>
    <string name="image_text_2">Das Treppenhaus Fresko (19 x 30,5m) zu den vier Erdteilen von Tiepolo\n(Doppelt tippen um zu Zoomen)</string>
    <string name="image_source_2">Bildquelle: Web Gallery of Art: http://www.wga.hu/index1.html</string>
    <string name="TaskText2">Das größte zusammenhängende Fresko der Welt im Treppenhaus der Residenz zeigt vier Erdteile. Wie würde dein Fresko zu diesem Thema aussehen?</string>
    <string name="Title3">St. Kiliansdom</string>
    <string name="Text3">Der St. Kiliansdom zu Würzburg ist eine römisch-katholische Kirche in Würzburg, die dem Heiligen Kilian (Schutzpatron von Würzburg und Franken) geweiht ist. Der Dom ist die Bischofskirche des Bistums Würzburg.\n Mit seiner Doppelturmfassade und einer Gesamtlänge von 105 Metern ist er das viertgrößte romanische Kirchengebäude Deutschlands und ein Hauptwerk deutscher Baukunst zur Zeit der salischen Kaiser.\n\n
        Erbaut wurde der Kiliansdom ab 1040 von Bischof Bruno. Es handelt sich um den dritten Dombau, nachdem die ersten beiden (erbaut um 787 und 855) durch Feuer ganz oder teilweise zerstört worden waren.\n\n
        Am Querhaus angebaut befindet sich die Schönbornkapelle. Sie ist eine bedeutende Schöpfung Balthasar Neumanns. Die Schönbornkapelle diente als Grablege für die Fürstbischöfe aus dem Hause Schönborn.\n\n
        Im Innern des Doms befinden sich eine Reihe von Kunstwerken, wie z.B. der Siebenarmige Leuchter von Andreas Moritz, die Domkanzel, der St.-Magdalenen-Altar, der Marienaltar, sowie der Taufstein aus dem Jahr 1279.\n\n
        Nach dem Einsturz großer Teile des Doms am 20. Februar 1946 als Folge des Bombenangriffs auf Würzburg am 16. März 1945 wurde er bis 1967 wieder aufgebaut. Dabei wurde die barocke Substanz zugunsten einer Re-Romanisierung zerstört. Die Neuausstattung betont den Gegensatz zu den erhaltenen historischen Partien. So entstand eine umstrittene Kombination aus größtenteils romanischen, modernen und barocken Elementen.
    </string>
    <string name="image_text_3">So sah der Dom früher aus: Von außen (1904) und innen (Altar und Chorraum, 1910)\n(Doppelt tippen um zu Zoomen)</string>
    <string name="image_source_3">Bildquelle: „Wuerzburg Dom 1904“ von Unbekannt - Verlag: Dr. Trenkler Co., Leipzig. Lizenziert unter Gemeinfrei über Wikimedia Commons - https://commons.wikimedia.org/wiki/File:Wuerzburg_Dom_1904.jpg#/media/File:Wuerzburg_Dom_1904.jpg</string>
    <string name="TaskText3">Was denkst du über die Modernisierung nach der Zerstörung des Doms im 2. Weltkrieg und die somit entstandene Kombination aus größtenteils romanischen, modernen und barocken Elementen?</string>
    <string name="Title4">Alter Kranen</string>
</resources>