<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_questionnaire"
        android:icon="@drawable/ic_action_questionnaire"
        android:title="@string/mainactivity_evaluation_title"
        yourapp:showAsAction="always"/>
    <item android:id="@+id/action_sources"
        android:icon="@drawable/ic_action_info"
        android:title="@string/mainactivity_info_title"
        yourapp:showAsAction="always"/>
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/mainactivity_help_title"
        yourapp:showAsAction="always"/>
    <item android:id="@+id/action_badges"
        android:icon="@drawable/ic_action_badges"
        android:title="@string/mainactivity_badges_title"
        yourapp:showAsAction="always"/>
</menu>